# Course_Selection_System

./: README.md  pyproject.toml
database/: accounts.json  course.json
database/student_data/: D1149279_courses.json  D1273865_courses.json
